@@ -7,8 +7,6 @@ Description: transitional dummy package
 
 Package: freeipa-common
 Architecture: all
-Breaks: python-freeipa
-Replaces: python-freeipa
 Depends:
  ${misc:Depends},
 Description: FreeIPA centralized identity framework -- common files
@@ -35,14 +33,14 @@ Depends:
  libsss-sudo,
  libxmlrpc-core-c3 (>= 1.16.33-3.1ubuntu5),
  oddjob-mkhomedir,
- python-dnspython,
- python-ipaclient (= ${source:Version}),
- python-gssapi,
- python-ldap,
- python-sss,
+ python3-dnspython,
+ python3-ipaclient (= ${source:Version}),
+ python3-gssapi,
+ python3-ldap,
+ python3-sss,
  sssd (>= 1.14.0),
  ${misc:Depends},
- ${python:Depends},
+ ${python3:Depends},
  ${shlibs:Depends}
 Recommends:
  chrony,
@@ -59,64 +57,62 @@ Description: FreeIPA centralized identity framework -- client
  .
  This is the client package.
 
-Package: python-ipaclient
+Package: python3-ipaclient
 Architecture: all
 Section: python
 Breaks: freeipa-client (<< 4.3.0-1)
 Replaces: freeipa-client (<< 4.3.0-1)
 Depends:
  freeipa-common (= ${binary:Version}),
- python-augeas,
- python-dnspython,
- python-ipalib (>= ${source:Version}),
- python-jinja2,
+ python3-augeas,
+ python3-dnspython,
+ python3-ipalib (>= ${source:Version}),
+ python3-jinja2,
  ${misc:Depends},
- ${python:Depends},
-Description: FreeIPA centralized identity framework -- Python modules for ipaclient
+ ${python3:Depends},
+Description: FreeIPA centralized identity framework -- Python3 modules for ipaclient
  FreeIPA is an integrated solution to provide centrally managed Identity
  (machine, user, virtual machines, groups, authentication credentials), Policy
  (configuration settings, access control information) and Audit (events,
  logs, analysis thereof).
  .
- This Python module is used by FreeIPA client.
+ This Python3 module is used by FreeIPA client.
 
-Package: python-ipalib
+Package: python3-ipalib
 Architecture: all
 Section: python
-Breaks: python-freeipa
-Replaces: python-freeipa
 Depends:
  freeipa-common (= ${source:Version}),
  gnupg2,
  gnupg-agent,
  keyutils,
- python-cffi,
- python-cryptography,
- python-dbus,
- python-dnspython,
- python-gssapi,
- python-ldap,
- python-libipa-hbac,
- python-lxml,
- python-netaddr,
- python-netifaces (>= 0.10.4),
- python-nss (>= 0.16.0),
- python-pyasn1,
- python-qrcode (>= 5.0.0),
- python-requests,
- python-setuptools,
- python-six,
- python-usb (>= 1.0.0~b2),
- python-yubico,
+ python3-cffi,
+ python3-cryptography,
+ python3-dbus,
+ python3-dnspython,
+ python3-gssapi,
+ python3-ldap,
+ python3-libipa-hbac,
+ python3-lxml,
+ python3-netaddr,
+ python3-netifaces (>= 0.10.4),
+ python3-nss (>= 0.16.0),
+ python3-pyasn1,
+ python3-qrcode (>= 5.0.0),
+ python3-requests,
+ python3-setuptools,
+ python3-six,
+ python3-usb (>= 1.0.0~b2),
+ python3-yubico,
  systemd,
  ${misc:Depends},
- ${python:Depends},
+ ${python3:Depends},
  ${shlibs:Depends},
-Description: FreeIPA centralized identity framework -- shared Python modules
+Description: FreeIPA centralized identity framework -- shared Python3 modules
  FreeIPA is an integrated solution to provide centrally managed Identity
  (machine, user, virtual machines, groups, authentication credentials), Policy
  (configuration settings, access control information) and Audit (events,
  logs, analysis thereof).
  .
- This Python module is used by other FreeIPA packages.
+ This Python3 module is used by other FreeIPA packages.
 
