@@ -25,29 +25,29 @@ Build-Depends:
  libssl-dev,
  libtalloc-dev,
  libxmlrpc-core-c3-dev (>= 1.33.06),
- python-all-dev,
- python-cryptography,
- python-dbus,
- python-dnspython (>= 1.11.1),
- python-gssapi,
- python-jinja2,
- python-kdcproxy,
- python-ldap (>= 3.1),
- python-lesscpy,
- python-libipa-hbac,
- python-libsss-nss-idmap,
- python-lxml,
- python-netaddr,
- python-netifaces (>= 0.10.4),
- python-nose,
- python-nss (>= 0.16.0),
- python-polib,
- python-pyasn1,
- python-qrcode (>= 5.0.0),
- python-setuptools,
- python-six,
- python-sss (>= 1.14.0),
- python-usb (>= 1.0.0~b2),
- python-yubico,
+ python3-all-dev,
+ python3-cryptography,
+ python3-dbus,
+ python3-dnspython (>= 1.11.1),
+ python3-gssapi,
+ python3-jinja2,
+ python3-kdcproxy,
+ python3-ldap (>= 3.1),
+ python3-lesscpy,
+ python3-libipa-hbac,
+ python3-libsss-nss-idmap,
+ python3-lxml,
+ python3-netaddr,
+ python3-netifaces (>= 0.10.4),
+ python3-nose,
+ python3-nss (>= 0.16.0),
+ python3-polib,
+ python3-pyasn1,
+ python3-qrcode (>= 5.0.0),
+ python3-setuptools,
+ python3-six,
+ python3-sss (>= 1.14.0),
+ python3-usb (>= 1.0.0~b2),
+ python3-yubico,
  systemd,
  uuid-dev,
