@@ -1,3 +1,3 @@
-dbus_python python-dbus
+dbus_python python3-dbus
 dogtag_pki pki-server
-jwcrpyto python-jwcrypto
+jwcrpyto python3-jwcrypto
