@@ -15,7 +15,9 @@ endif
 
 DESTDIR=$(CURDIR)/debian/tmp
 
-export PYTHON=python
+export PYTHON=python3
+export am_cv_python_pythondir=/usr/lib/python3/dist-packages
+export am_cv_python_pyexecdir=/usr/lib/python3/dist-packages
 
 confflags = \
 	--libexecdir=/usr/lib/ \
@@ -92,11 +94,6 @@ endif
 	# remove files which are useful only for make uninstall
 	find $(CURDIR)/debian/tmp -wholename '*/dist-packages/*/install_files.txt' -exec rm '{}' \;
 
-	# we still need to use python2
-	find debian/tmp ! -name '*.pyc' -a ! -name '*.pyo' -a \
-	    -type f -exec grep -qsm1 '^#!.*\bpython' {} \; \
-	    -exec sed -i -e '1 s|^#!.*\bpython[^ ]*|#!/usr/bin/python|' {} \;
-
 override_dh_missing:
 	dh_missing --fail-missing
 
@@ -118,5 +115,5 @@ override_dh_fixperms:
 	fi
 
 %:
-	dh $@ --with python2
+	dh $@ --with python3
 #		--builddirectory=build
