@@ -7,6 +7,7 @@ freeipa (4.8.0-1) UNRELEASED; urgency=medium
   * rules: Rework gentarball target.
   * control: Bump policy to 4.4.0.
   * Bump debhelper compat to 12.
+  * Migrate to python3.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Fri, 26 Apr 2019 00:12:20 +0300
 
